--- a/InfectionNosocomiale.html
+++ b/InfectionNosocomiale.html
@@ -19,7 +19,7 @@
 		
 				 </div>
 					<div class="header_navbar--menu">
-						<a href="C:\MAMP\htdocs\header_navbar--menu-link"> <i class='fas fa-user-cog blue-color'></i> Administrateur</a>
+						<a href="header_navbar--menu-link"> <i class='fas fa-user-cog blue-color'></i> Administrateur</a>
 						<a href="header_navbar--menu-link">  <i class='fa fa-user blue-color'></i> Utilisateur</a>
 					</div>
 				
