--- a/InfectionNosocomiale.html
+++ b/InfectionNosocomiale.html
@@ -32,7 +32,7 @@
 					<h1> INFNOSO </h1>
 					
 					<p> 
-					<marquee> Bienvenue dans votre aplication sur les infections nosocomiales.</marquee>
+					<marquee> Bienvenue dans votre application sur les infections nosocomiales.</marquee>
            <marquee direction="center" 
         behavior="alternate" 
 		Style="text-align:center">
